[gd_scene load_steps=2 format=3 uid="uid://cendrc5eor65o"]

[ext_resource type="Script" uid="uid://dgnvnspihoatj" path="res://Menus/Network/netplay.gd" id="1_ew7x7"]

[node name="Netplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ew7x7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Button_Offline" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
text = "Offline Singleplayer"

[node name="Button_Host" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
text = "Host Multiplayer"

[node name="Button_Join" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
text = "Join Multiplayer"

[node name="Button_Cancel" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
text = "Cancel
"

[connection signal="pressed" from="VBoxContainer/Button_Offline" to="." method="_on_button_offline_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Host" to="." method="_on_button_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Join" to="." method="_on_button_join_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Cancel" to="." method="_on_button_cancel_pressed"]
